--- a/Selina's story.ipynb
+++ b/Selina's story.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -989,12 +989,13 @@
        "USA      1   3.57"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# calculate the pct for only female weightlifting gold medals, break down by country.\n",
     "female_wl_gold = wl_female[wl_female.Medal == 'Gold']\n",
     "female_wl_gold = female_wl_gold.groupby(['NOC']).count()[['Medal']]\n",
     "female_wl_gold['pct'] = np.around( list(female_wl_gold.Medal/np.sum(female_wl_gold.Medal)), decimals=4) \n",
@@ -1004,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1028,94 +1029,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>ARM</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BLR</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CAN</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>CHN</th>\n",
        "      <td>15</td>\n",
        "      <td>17.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COL</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GRE</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HUN</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>INA</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>IND</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>JPN</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KAZ</th>\n",
-       "      <td>6</td>\n",
-       "      <td>7.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KOR</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MDA</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MEX</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NGR</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>POL</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PRK</th>\n",
-       "      <td>6</td>\n",
-       "      <td>7.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ROU</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RUS</th>\n",
@@ -1128,14 +1044,34 @@
        "      <td>8.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>PRK</th>\n",
+       "      <td>6</td>\n",
+       "      <td>7.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KAZ</th>\n",
+       "      <td>6</td>\n",
+       "      <td>7.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BLR</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>TPE</th>\n",
        "      <td>5</td>\n",
        "      <td>5.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>TUR</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.19</td>\n",
+       "      <th>INA</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KOR</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>UKR</th>\n",
@@ -1143,7 +1079,7 @@
        "      <td>3.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>USA</th>\n",
+       "      <th>POL</th>\n",
        "      <td>2</td>\n",
        "      <td>2.38</td>\n",
        "    </tr>\n",
@@ -1152,6 +1088,71 @@
        "      <td>2</td>\n",
        "      <td>2.38</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HUN</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COL</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ROU</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TUR</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ARM</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NGR</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MEX</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JPN</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IND</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GRE</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CAN</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MDA</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.19</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1159,43 +1160,44 @@
       "text/plain": [
        "         Medal    pct\n",
        "NOC                  \n",
-       "ARM          1   1.19\n",
-       "BLR          5   5.95\n",
-       "CAN          1   1.19\n",
        "CHN         15  17.86\n",
-       "COL          2   2.38\n",
-       "GRE          1   1.19\n",
-       "HUN          2   2.38\n",
-       "INA          4   4.76\n",
-       "IND          1   1.19\n",
-       "JPN          1   1.19\n",
-       "KAZ          6   7.14\n",
-       "KOR          3   3.57\n",
-       "MDA          1   1.19\n",
-       "MEX          1   1.19\n",
-       "NGR          1   1.19\n",
-       "POL          2   2.38\n",
-       "PRK          6   7.14\n",
-       "ROU          1   1.19\n",
        "RUS         10  11.90\n",
        "THA          7   8.33\n",
+       "PRK          6   7.14\n",
+       "KAZ          6   7.14\n",
+       "BLR          5   5.95\n",
        "TPE          5   5.95\n",
-       "TUR          1   1.19\n",
+       "INA          4   4.76\n",
+       "KOR          3   3.57\n",
        "UKR          3   3.57\n",
+       "POL          2   2.38\n",
+       "pending      2   2.38\n",
+       "HUN          2   2.38\n",
+       "COL          2   2.38\n",
        "USA          2   2.38\n",
-       "pending      2   2.38"
+       "ROU          1   1.19\n",
+       "TUR          1   1.19\n",
+       "ARM          1   1.19\n",
+       "NGR          1   1.19\n",
+       "MEX          1   1.19\n",
+       "JPN          1   1.19\n",
+       "IND          1   1.19\n",
+       "GRE          1   1.19\n",
+       "CAN          1   1.19\n",
+       "MDA          1   1.19"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# calculate the pct for all medals\n",
     "female_wl_all = wl_female.groupby(['NOC']).count()[['Medal']]\n",
     "female_wl_all['pct'] = np.around( list(female_wl_all.Medal/np.sum(female_wl_all.Medal)), decimals=4) \n",
     "female_wl_all['pct'] = female_wl_all['pct'] * 100\n",
-    "female_wl_all.sort"
+    "female_wl_all.sort_values(['pct'], ascending=False)"
    ]
   },
   {
